initialize LaF as a part of LafManagerImpl service initialization - not as part of app bootstrap
GitOrigin-RevId: b8d394352646cc524a6e3c7e941b2f33836cfea5